# figureManager-oop_lab-1

./: CMakeLists.txt  main.cpp  main.h
headers/: app.h  constants.h  dot.h  entrypoint.h  fabric.h  figures.h  figuresManager.h  inputValidator.h  menu.h
src/: app.cpp  dot.cpp  entrypoint.cpp  fabric.cpp  figures.cpp  figuresManager.cpp  inputValidator.cpp  menu.cpp
